enable comment system

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -1,6 +1,6 @@
 ---
 title: EX362 Exam Prep
-comment: true
+comments: true
 ---
 
 This page contains the necessary resources to help you prepare for the Red Hat Certified Specialist in Identity Management exam, EX362. This follows the youtube playlist as much as possible with various examples and ideas. Soon to come, you will also find our own example practice exam for you to try your hand at to test your knowledge.
