readjust objective names and add comments

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -123,7 +123,12 @@ ipaclients
 
 ; Based on exam requirements, these vars might have to be set differently
 [ipa:vars]
+; if you are using an ntp server, set to false and  set ipaclient_ntp_servers
+; ipaclient_no_ntp=false
+; ipaclient_ntp_servers='["192.168.15.12"]'
 ipaclient_no_ntp=true
+; we plan on setting up roaming home directories. setting this
+; to true shouldn't hurt.
 ipaclient_mkhomedir=true
 ipaclient_ssh_trust_dns=true
 
@@ -142,7 +147,8 @@ ipaserver_auto_forwarders=false
 ipaserver_no_host_dns=true
 ipaserver_reverse_zones='["15.168.192.in-addr.arpa."]'
 ipaserver_external_ca=false
-ipaserver_setup_adtrust=true
+; ipaserver_setup_adtrust=true
+; ipaserver_netbios_name=EXAMPLEAD
 
 [ipareplica:vars]
 ipaadmin_principal=admin
@@ -157,7 +163,8 @@ ipareplica_setup_kra=true
 ipareplica_setup_firewalld=true
 ipareplica_no_forwarders=true
 ipareplica_auto_forwarders=false
-ipareplica_setup_adtrust=true
+; ipareplica_setup_adtrust=true
+; ipareplica_netbios_name=EXAMPLEAD
 
 [ipaclients:vars]
 ipaclient_domain=example.com
@@ -238,19 +245,29 @@ At this point, you will need to configure all the clients with an ansible user a
 
 # Installation, mostly automatic (recommended)
 # This will setup DNS and the necessary pieces for an AD trust
-# Optionally, you can use the --netbios-name switch to set your forest netbios name
+# Optionally, you can set --setup-adtrust use the --netbios-name switch
+# to set your forest netbios name
 % ipa-server-install --domain example.com --realm EXAMPLE.COM \
     --reverse-zone=15.168.192.in-addr.arpa. \
     --no-forwarders \
     --no-ntp \
     --setup-dns \
-    --setup-adtrust \
+    -p Passw0rd! \
+    -a Passw0rd!
+
+# Same as the above, but sets NTP server to sync to before starting
+# the installation.
+% ipa-server-install --domain example.com --realm EXAMPLE.COM \
+    --reverse-zone=15.168.192.in-addr.arpa. \
+    --no-forwarders \
+    --ntp-server=192.168.15.12 \
+    --setup-dns \
     -p Passw0rd! \
     -a Passw0rd!
 ```
 
 ``` bash
-% firewall-cmd --permanent --add-service={freeipa-4,ntp,dns,freeipa-trust}
+% firewall-cmd --permanent --add-service={freeipa-4,dns}
 ```
 
 ``` bash
@@ -314,7 +331,6 @@ Ensure that your ansible controller is setup and install the collections as need
         state: enabled
       with_items:
         - "freeipa-4"
-        - "freeipa-trust"
         - "dns"
 
     # We need to make sure that any A records get a PTR record.
@@ -331,24 +347,36 @@ Ensure that your ansible controller is setup and install the collections as need
 
 ``` bash
 % hostnamectl set-hostname idm2.example.com
-# Adding a replica
+% nmcli con mod eth0 ipv4.address 192.168.15.3/24
+% nmcli con mod eth0 ipv4.gateway 192.168.15.1
+% nmcli con mod eth0 ipv4.method manual
+% nmcli con mod eth0 ipv4.dns-search example.com
+% nmcli con mod eth0 ipv4.dns 192.168.15.2
+% nmcli con up eth0
+```
+
+``` bash
+# Adding a replica, optionally change --no-ntp to --ntp-server
 % ipa-replica-install --setup-dns \
     --setup-ca \
-    --no-forwarders
+    --no-forwarders \
+    --no-ntp
 
-# Adding a replica unattended without forwarders
-% ipa-client-install --realm EXAMPLE.COM
+# Adding a replica unattended without forwarders.
+# Optionally set --ntp-server.
+% ipa-client-install --realm EXAMPLE.COM --no-ntp
 % kinit admin
 % ipa hostgroup-add-member --hosts=ipa02.example.com ipaservers
 % ipa-replica-install --setup-dns \
     --setup-ca \
     --no-forwarders \
+    --no-ntp \
     --unattended
 ```
 
 #### Ansible Method
 
-### Creating Users, Groups, and Policies
+### Create Users, Groups, and Policies
 
 | Users                   | Login Name    | Type      | Group    | Role         | UID/GID   |
 |-------------------------|---------------|-----------|----------|--------------|-----------|
@@ -432,7 +460,7 @@ delete: krbLastPwdChange
 
 The common question we receive (and even the #freeipa IRC receive) is "Why can't we just set the password to not be expired right away?" See [this page](https://www.freeipa.org/page/New_Passwords_Expired) for information on why this is. You may also look at the [pagure](https://pagure.io/freeipa/issue/5763) page and the [Red Hat bugzilla related bug](https://bugzilla.redhat.com/show_bug.cgi?id=1317060).
 
-## Implement a SSO
+## Implement Single Sign On (SSO)
 
 ### Create an SSO client
 
@@ -456,11 +484,11 @@ To setup a very, very simple SSO, you can setup a simple location that requires 
 </Location>
 ```
 
-### Verify SSO client operationg
+### Verify SSO client operation
 
 ...
 
-## IdM Client Installation and Configuration
+## Install and configure an IdM Client
 
 ### Install and configure IdM Clients
 
@@ -495,7 +523,8 @@ To setup a very, very simple SSO, you can setup a simple location that requires 
 
 # Install the ipa-client packages
 % dnf install ipa-client -y
-% ipa-client-install --realm EXAMPLE.COM --domain example.com
+# Optionally set --no-ntp to --ntp-server
+% ipa-client-install --realm EXAMPLE.COM --domain example.com --no-ntp
 . . .
 % id admin
 uid=686600000(admin) gid=686600000(admins) groups=686600000(admins)
@@ -503,7 +532,7 @@ uid=686600000(admin) gid=686600000(admins) groups=686600000(admins)
 
 ### Configure Kerberized services
 
-One of the things that you may end up doing, whether by hand or in an automated fashion, is creating kerberized services. In a previous section, we addressed creating an NFS service for both a server and a client for the purpose of automating home directory mounts on a client when a user logs in. So you already have the idea of what this entails.
+One of the things that you may end up doing, whether by hand or in an automated fashion, is creating kerberized services. In a later section, we address creating an NFS service for both a server and a client for the purpose of automating home directory mounts on a client when a user logs in. Before we dive into that, this just goes over simple kerberized service creation.
 
 ``` bash
 # Create kerberos service
@@ -519,7 +548,7 @@ Not only that, it's probably a good idea to actually *get* the keytab.
 
 For an example of automating keytab creation and retrieval, see the CentOS/FreeIPA page on this site.
 
-## IdM HA Configuration
+## Manage the IdM integrated certificate authority
 
 ### Configure and manage a certificate authority
 
@@ -586,7 +615,10 @@ When a domain supports the KRA role, it can hold password vaults or anything tha
 
 #### Script or CLI Method
 
+On each IdM server, you will need to enable the role.
+
 ``` bash
+% dnf install ipa-server-kra
 % ipa-kra-install
 ```
 
@@ -594,9 +626,9 @@ When a domain supports the KRA role, it can hold password vaults or anything tha
 
 #### Ansible Method
 
-If you are following the ansible method, you already have this role installed based on the inventory configuration.
+If you are following the ansible method, you already have this role installed based on the inventory configuration. Now it's a matter of creating a simple secret.
 
-## IdM Users and Policies Management
+## Create and configure IdM users and user policies
 
 In FreeIPA, there are two sets of policies:
 
@@ -638,7 +670,7 @@ lrwxrwxrwx. 1 root root  27 Jan 14  2020 system-auth -> /etc/authselect/system-a
 -rw-r--r--. 1 root root  84 May 11  2019 vlock
 ```
 
-On a typical Red Hat system, the most common ones (such as `su`, `sshd`, `sudo`) imports the `system-auth` file, so the login request is processed through those means. When defining HBAC rules, you either must allow "all" services or be selective. For example, if an HBAC rule allows "sshd", a user is allowed to ssh into a system, but wouldn't allow them to login locally, as that goes through `login`. If you want the user to be able to run the `su` and `sudo` commands, you would also need to allow those services. Otherwise, the user is denied, despite sudo policies being available.
+On a typical Red Hat system, the most common ones (such as `su`, `sshd`, `sudo`) imports the `system-auth` file, so the login request is processed through those means. When defining HBAC rules, you either must allow "all" services or be selective. For example, if an HBAC rule allows "sshd", a user is allowed to ssh into a system, but wouldn't allow them to login locally on the console, as that goes through `login`. If you want the user to be able to run the `su` and `sudo` commands, you would also need to allow those services. Otherwise, the user is denied, even if sudo policies are available.
 
 ``` bash
 [label@mgt ~]$ sudo -i
@@ -679,12 +711,18 @@ Below are some examples of adding access.
 % ipa hbactest --rules=corp_access --user=brufus --host=client.example.com --service=sshd
 ```
 
-### Configure roaming/automounted home directories
+To do this the ansible way, you can make a playbook like this.
+
+``` yaml
+
+```
+
+### Configure roaming or automounted home directories
 
 You will need to configure your NFS server to serve up roaming home directories for users and then your client should have automouting enabled.
 
 !!! note "Client Kerberos Service"
-    It may not be required to create an nfs kerberos service for the client. The ipa-client-automount command may already handle this but it does not hurt to create one. In fact, the host keytab is used on the client side anyway. Creating an NFS client keytab may have been required back in the EL6 days.
+    It may not be required to create an nfs kerberos service for the client. The ipa-client-automount command may already handle this but it does not hurt to create one. In fact, the host keytab is used on the client side anyway. Creating an NFS client keytab may have been required in the past.
 
 ``` bash
 # IDM Steps
@@ -731,6 +769,14 @@ You will need to configure your NFS server to serve up roaming home directories 
 ```
 
 To test, login to the system via ssh or console and verify the home directory has mounted. /var/log/messages and secure will display errors in case of failure.
+
+### Use Ansible Tower to configure and manage IdM Users
+
+Several sections ago, we setup users either manually or via ansible playbooks. This would be generally the same, but may entail further configuration.
+
+With that said, Ansible Tower (AWX or AAP) is out of scope for this guide, as there is no straight forward way to set it up in a lab. AWX for example has a kubernetes operator and they encourage the use of docker for testing purposes. You can do this, but this is not formally tested.
+
+AAP on the other hand has installation steps for non-kubernetes environments. However, it is a Red Hat product and requires a subscription to use.
 
 ### Configure IdM as an LDAP backend for external services
 
@@ -804,9 +850,192 @@ If you'd like an example of setting up Ansible Tower (or AWX, the open source ve
 !!! note "Kerberos"
     On some applications, it is possible to use kerberos authentication rather than a straight bind account. The general idea is the same when picking out the base dn, attributes, and the like. However, instead you would create an account with an accompanying LDAP/... service principal to do the authentication.
 
-## Creating Trust with AD Domain
+## Maintain IdM services
 
-### Create trust relationships with Active Directory
+### Configure NTP on all IdM components
+
+!!! note "NTP Server Setup"
+    The utility server that is part of this lab can be used to run an NTP server. See [Setup an NTP Server](#setup-an-ntp-server).
+
+When the domain was initially setup, we may have used `--no-ntp`, including for the clients. This means there's no attempt to configure nor sync chrony. This automatically assumes chrony is working as intended with the default pool configured from the chrony package (or by IT policy via automation). However, for this lab, if you have an NTP server you want to use, you can set it up in the `/etc/chrony.conf` file.
+
+```
+% vi /etc/chrony.conf
+. . .
+# pool 2.rocky.pool.ntp.org iburst
+server 192.168.15.12
+. . .
+
+% systemctl restart chronyd.service
+% chronyc tracking
+```
+
+### Configure firewall on all IdM components
+
+If the domain is working, then you setup firewalld appropriately.
+
+### Back up an IdM infrastructure
+
+There are multiple ways you can backup IPA. 
+
+* Full backup: Default, shuts down IPA before performing a backup. This backs up with raw files. As such, it must be done offline.
+* Data backup: Backs up a copy of the ldap data and the changelog (the IPA-REALM instance, DogTag, IPA backend). This can be done online.
+
+#### Script or CLI Method
+
+``` bash
+# Turns off IPA completely and perform a backup
+% ipa-backup
+# Backs up and gpg encrypts
+% ipa-backup --gpg --gpg-keyring=/root/keys
+```
+
+To restore a backup, the ipa-restore command is available.
+
+``` bash
+% ipa-restore /var/lib/ipa/backup/
+```
+
+#### Ansible Method
+
+### Perform a backup without interruption of services
+
+It is possible to perform a backup without taking down services. However, not everything will get backed up as a result.
+
+#### Script or CLI Method
+
+The backup command allows you to pass an online flag to ensure a backup taken doesn't down the IPA services. Note that not everything can be backed up online.
+
+``` bash
+# Backs up data only and doesn't take down IPA
+% ipa-backup --data --online
+# Backs up data only and gpg encrypts
+% ipa-backup --gpg --gpg-keyring=/root/keys --data --online
+```
+
+## Value Add
+
+### Use the REST api to query IdM
+
+When you invoke the `ipa` command, you are actually communicating with the API that runs on the IdM replicas. Operations done are sent via a POST with JSON data. The return data is also in JSON and translated to be readable in the terminal. Because it's JSON, custom scripts can be made with say perl or python that communicates with the API to send the calls, perhaps for specific tasks, jobs, or other operations that could be automated. You can also use `curl` to do this also if you so choose. 
+
+The question becomes, "well, how do I know the right data to send?" You can issue the -vv switch to see the request being sent.
+
+``` bash
+% ipa -vv ping
+ipa: INFO: trying https://idm1.example.com/ipa/json
+ipa: INFO: [try 1]: Forwarding 'schema' to json server 'https://idm1.example.com/ipa/json'
+ipa: INFO: trying https://idm1.example.com/ipa/session/json
+ipa: INFO: [try 1]: Forwarding 'ping/1' to json server 'https://idm1.example.com/ipa/session/json'
+ipa: INFO: Request: {
+    "id": 0, 
+    "method": "ping/1", 
+    "params": [
+        [], 
+        {
+            "version": "2.251"
+        }
+    ]
+}
+ipa: INFO: Response: {
+    "error": null, 
+    "id": 0, 
+    "principal": "admin@EXAMPLE.COM", 
+    "result": {
+        "summary": "IPA server version 4.10.2. API version 2.251"
+    }, 
+    "version": "4.10.2"
+}
+--------------------------------------------
+IPA server version 4.10.2. API version 2.251
+--------------------------------------------
+```
+
+If you look at the 'request' section, you can see the data that is sent. Each request has a `method` and `params`, where method is a command to be excuted and params is simply an array that contains positional arguments and a dictionary of options. If you take a look at say, group-show, you would see a different request.
+
+``` bash
+% ipa -vv group-show admins
+ipa: INFO: trying https://idm1.example.com/ipa/session/json
+ipa: INFO: [try 1]: Forwarding 'group_show/1' to json server 'https://idm1.example.com/ipa/session/json'
+ipa: INFO: Request: {
+    "id": 0, 
+    "method": "group_show/1", 
+    "params": [
+        [
+            "admins"
+        ], 
+        {
+            "version": "2.230"
+        }
+    ]
+}
+### Lots of output ###
+```
+
+Let's say I wanted to perform that in a simple bash script that uses curl. I would perform a `kinit` and then run the script below to have it login for me via kerberos and do the work.
+
+``` bash
+#!/bin/bash
+ipaReplica=idm1.example.com
+cookieJar=my.cookie.jar
+
+# Login with Kerberos
+curl -v \
+  -H referer:https://$ipaReplica/ipa \
+  -c $cookieJar -b $cookieJar \
+  --cacert /etc/ipa/ca.crt \
+  --negotiate -u : \
+  -X POST \
+  https://$ipaReplica/ipa/session/login_kerberos
+
+# Send user_find method request
+curl -v \
+  -H referer:https://$ipaReplica/ipa \
+  -H "Content-Type:application/json" \
+  -H "Accept:applicaton/json"\
+  -c $cookieJar -b $cookieJar \
+  --cacert /etc/ipa/ca.crt \
+  -d  '{"method":"group_show/1","params":[["admins"],{}],"id":0}' \
+  -X POST \
+  https://$ipaReplica/ipa/session/json
+```
+
+Any of the commands ran via `ipa` can be reviewed with the -vv switch so you can see what kind of call it's making and how it's making it. Thus, making it easier to tie into your own scripts. On the Web UI, you can go to IPA Server -> API Browser to find more information on the specific API calls.
+
+
+### Implement an IdP
+
+While not strictly a certification objective at this present time, there may be a chance it could be. FreeIPA 4.10+ have the ability to implement authentication to external identity providers. FreeIPA allows you to use RADIUS proxy authentication for example, but using this same method, an OAuth 2.0 authorization server could be used as well. When it comes to an IdP, you can instead configure IdP clients using `ipa idp-add` and use software like Keycloak or otherwise that supports OAuth 2.0 workflows. We recommend checking out the [FreeIPA Workshop Unit 12](https://freeipa.readthedocs.io/en/latest/workshop/12-external-idp-support.html) for more details.
+
+### Setup an NTP Server
+
+It is unlikely you'll need to setup an NTP server on an exam. However, rather than relying on the built-in pool servers provided by the chrony package, you may ask IdM to use another NTP server or pool for itself and the clients that enroll. Using the utility server, we can setup a quick NTP server.
+
+```
+% vi /etc/chrony.conf
+. . .
+allow 192.168.15.0/24
+
+% systemctl restart chronyd.service
+% firewall-cmd --add-service=ntp --permanent
+% firewall-cmd --reload
+```
+
+For your IdM domain, you can then add a SRV record. This is supposed to allow the client installation to automatically set the NTP server.
+
+```
+% ipa dnsrecord-add example.com _ntp \
+  --srv-port=123 \
+  --srv-target=utility.example.com. \
+  --srv-weight=100 \
+  --srv-priority=0
+```
+
+### Active Directory Trust
+
+Active Directory trusts are no longer part of the main objectives for the exam. However, that does not mean it will not be part of it. It is important to still know how to set it up manually. In the installation section of this guide, there are commented variables for a trust configuration.
+
+#### Create trust relationships with Active Directory
 
 !!! note "AD Setup"
     We do not cover setting up an AD forest here. This is out of scope for this series. If you are using Server 2016 or higher and you are using "core", look up the commands:
@@ -989,129 +1218,4 @@ The test should pass without any issues.
 
     Groups in Active Directory have three types. These three types can actually change the behavior of how SSSD on the IPA domain controllers resolve them or if they'll even be resolvable at all. The three types are 'Domain Local', 'Global', and 'Universal'. If at all possible, avoid groups being 'Global'. Domain Local or Universal is recommended.
 
-## IdM maintenance
 
-### Back up an IdM infrastructure
-
-There are multiple ways you can backup IPA. 
-
-* Full backup: Default, shuts down IPA before performing a backup. This backs up with raw files. As such, it must be done offline.
-* Data backup: Backs up a copy of the ldap data and the changelog (the IPA-REALM instance, DogTag, IPA backend). This can be done online.
-
-``` bash
-# Turns off IPA completely and perform a backup
-% ipa-backup
-# Backs up and gpg encrypts
-% ipa-backup --gpg --gpg-keyring=/root/keys
-```
-
-To restore a backup, the ipa-restore command is available.
-
-``` bash
-% ipa-restore /var/lib/ipa/backup/
-```
-
-### Perform a backup without interruption of services
-
-The backup command allows you to pass an online flag to ensure a backup taken doesn't down the IPA services. Note that not everything can be backed up online.
-
-``` bash
-# Backs up data only and doesn't take down IPA
-% ipa-backup --data --online
-# Backs up data only and gpg encrypts
-% ipa-backup --gpg --gpg-keyring=/root/keys --data --online
-```
-
-## Value Add
-
-### Use the REST api to query IdM
-
-When you invoke the `ipa` command, you are actually communicating with the API that runs on the IdM replicas. Operations done are sent via a POST with JSON data. The return data is also in JSON and translated to be readable in the terminal. Because it's JSON, custom scripts can be made with say perl or python that communicates with the API to send the calls, perhaps for specific tasks, jobs, or other operations that could be automated. You can also use `curl` to do this also if you so choose. 
-
-The question becomes, "well, how do I know the right data to send?" You can issue the -vv switch to see the request being sent.
-
-``` bash
-% ipa -vv ping
-ipa: INFO: trying https://idm1.example.com/ipa/json
-ipa: INFO: [try 1]: Forwarding 'schema' to json server 'https://idm1.example.com/ipa/json'
-ipa: INFO: trying https://idm1.example.com/ipa/session/json
-ipa: INFO: [try 1]: Forwarding 'ping/1' to json server 'https://idm1.example.com/ipa/session/json'
-ipa: INFO: Request: {
-    "id": 0, 
-    "method": "ping/1", 
-    "params": [
-        [], 
-        {
-            "version": "2.251"
-        }
-    ]
-}
-ipa: INFO: Response: {
-    "error": null, 
-    "id": 0, 
-    "principal": "admin@EXAMPLE.COM", 
-    "result": {
-        "summary": "IPA server version 4.10.2. API version 2.251"
-    }, 
-    "version": "4.10.2"
-}
---------------------------------------------
-IPA server version 4.10.2. API version 2.251
---------------------------------------------
-```
-
-If you look at the 'request' section, you can see the data that is sent. Each request has a `method` and `params`, where method is a command to be excuted and params is simply an array that contains positional arguments and a dictionary of options. If you take a look at say, group-show, you would see a different request.
-
-``` bash
-% ipa -vv group-show admins
-ipa: INFO: trying https://idm1.example.com/ipa/session/json
-ipa: INFO: [try 1]: Forwarding 'group_show/1' to json server 'https://idm1.example.com/ipa/session/json'
-ipa: INFO: Request: {
-    "id": 0, 
-    "method": "group_show/1", 
-    "params": [
-        [
-            "admins"
-        ], 
-        {
-            "version": "2.230"
-        }
-    ]
-}
-### Lots of output ###
-```
-
-Let's say I wanted to perform that in a simple bash script that uses curl. I would perform a `kinit` and then run the script below to have it login for me via kerberos and do the work.
-
-``` bash
-#!/bin/bash
-ipaReplica=idm1.example.com
-cookieJar=my.cookie.jar
-
-# Login with Kerberos
-curl -v \
-  -H referer:https://$ipaReplica/ipa \
-  -c $cookieJar -b $cookieJar \
-  --cacert /etc/ipa/ca.crt \
-  --negotiate -u : \
-  -X POST \
-  https://$ipaReplica/ipa/session/login_kerberos
-
-# Send user_find method request
-curl -v \
-  -H referer:https://$ipaReplica/ipa \
-  -H "Content-Type:application/json" \
-  -H "Accept:applicaton/json"\
-  -c $cookieJar -b $cookieJar \
-  --cacert /etc/ipa/ca.crt \
-  -d  '{"method":"group_show/1","params":[["admins"],{}],"id":0}' \
-  -X POST \
-  https://$ipaReplica/ipa/session/json
-```
-
-Any of the commands ran via `ipa` can be reviewed with the -vv switch so you can see what kind of call it's making and how it's making it. Thus, making it easier to tie into your own scripts. On the Web UI, you can go to IPA Server -> API Browser to find more information on the specific API calls.
-
-
-### Implement an IdP
-
-While not strictly a certification objective at this present time, there may be a chance it could be. FreeIPA 4.10+ have the ability to implement authentication to external identity providers. FreeIPA allows you to use RADIUS proxy authentication for example, but using this same method, an OAuth 2.0 authorization server could be used as well. When it comes to an IdP, you can instead configure IdP clients using `ipa idp-add` and use software like Keycloak or otherwise that supports OAuth 2.0 workflows. We recommend checking out the [FreeIPA Workshop Unit 12](https://freeipa.readthedocs.io/en/latest/workshop/12-external-idp-support.html) for more details.
